Fixes ordering and button alignment

--- a/src/components/core/Item/Item.module.scss
+++ b/src/components/core/Item/Item.module.scss
@@ -11,6 +11,10 @@
 
   .image {
     width: 100%;
+
+    &--not-available {
+      opacity: 0.4;
+    }
   }
 
   .info-container {
