--- a/src/pages/ProductPage/Product.module.scss
+++ b/src/pages/ProductPage/Product.module.scss
@@ -110,6 +110,12 @@
         width: 200px;
         padding-left: 0;
         padding-right: 0;
+
+        .added {
+          display: flex;
+          justify-content: center;
+          gap: 8px;
+        }
       }
 
       @media only screen and (max-width: 900px) {
